Add "we shut this down" notice.

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -10,6 +10,18 @@
     <h1 class="">Forget goals. <em>Form habits.</em></h1>
     <p>Visualize your progress and create smart reminders.</p> 
   </div>
+
+  <section class="tombstone">
+    <h2 class="minor-heading">Gone, but not forgotten</h2>
+    <p>
+      Thanks for stopping by!
+      Be Habitual was a fun project while it lasted, but it is
+      <strong>no longer operational</strong>.
+      There are plenty of
+      <a href="https://www.wired.com/story/best-apps-build-habits-stick-to-them/">other habit-building apps</a>
+      available to help you on your way.
+    </p>
+  </section>
   
  <section class="quickstart">
     <h2 class="minor-heading">What habit are you trying to form?</h2>
