Remove "get started" button from home page.

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -58,8 +58,7 @@
   </section>
   
   <h2 class="minor-heading">
-    That&rsquo;s really all there is! <span class='gap'>&nbsp;</span>
-    <a href="/add_habit" class="progress">Get Started!</a>
+    That&rsquo;s really all there is!
   </div>
 
 <a href="/hobbit" id="hobbit"><img src="/images/ring@2x.png" alt="" height="25" width="25"></a>
